# 22-Agentic-Framework-Comparison-for-Reasoning-Tasks-across-BBH-GSM8K-and-ARC-Benchmarks

./: .gitignore  CLAUDE.md  README.md  framework_exceptions.md  pyproject.toml  run.sh  transcript.txt
.claude/: settings.local.json
.claude/commands/: plan_implement_framework.md
.github/ISSUE_TEMPLATE/: runtime-failure.md  setup-failure.md
analysis/: analysis.ipynb  detailed_results.csv  framework_comparison.csv
frameworks/: BBH_UTILITIES_GUIDE.md  config.yml  datasets.yml  reference_output_format.json  run_config.py  utils.py
frameworks/config_overrides/: config_fm_langchain.yml  config_fm_letta.yml  config_fm_livekit.yml  config_fm_metagpt.yml  config_fm_semantic-kernel.yml  config_fm_taskweaver.yml
frameworks/data_loaders/: __init__.py  arc_loader.py  base_loader.py  bbh_loader.py  gsm8k_loader.py
frameworks/fm_agency_swarm/: main.py  pyproject.toml  settings.json  setup.sh
frameworks/fm_agentzero/: main.py  pyproject.toml  setup.sh
frameworks/fm_agentzero/config/: config.yaml
frameworks/fm_anus/: main.py  pyproject.toml  setup.sh
frameworks/fm_autogen/: main.py  pyproject.toml  setup.sh
frameworks/fm_autogpt/: .gitignore  main.py  pyproject.toml  setup.sh
frameworks/fm_babyagi/: main.py  pyproject.toml  setup.sh
frameworks/fm_camel-ai/: main.py  pyproject.toml  setup.sh
frameworks/fm_crewai/: main.py  pyproject.toml  setup.sh
frameworks/fm_flowise/: .gitignore  .pnp.cjs  main.py  package.json  pyproject.toml  setup.sh
frameworks/fm_google_adk/: main.py  pyproject.toml  setup.sh
frameworks/fm_intentkit/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  setup.sh
frameworks/fm_langchain/: main.py  pyproject.toml  setup.sh
frameworks/fm_langgraph/: main.py  pyproject.toml  setup.sh
frameworks/fm_letta/: main.py  pyproject.toml  setup.sh
frameworks/fm_livekit/: main.py  pyproject.toml  setup.sh
frameworks/fm_mastra/: agent-server.js  main.py  package-lock.json  package.json  pyproject.toml  setup.sh
frameworks/fm_metagpt/: main.py  pyproject.toml  setup.sh
frameworks/fm_metagpt/config/: config2.yaml
frameworks/fm_n8n/: .gitignore  docker-compose.yml  main.py  pyproject.toml  setup.sh  workflow_template.json
frameworks/fm_openai-agents/: main.py  main_new.py  pyproject.toml  setup.sh
frameworks/fm_praisonai/: main.py  pyproject.toml  setup.sh
frameworks/fm_pydantic/: main.py  pyproject.toml  setup.sh
frameworks/fm_qwen_agent/: main.py  pyproject.toml  setup.sh
frameworks/fm_semantic-kernel/: main.py  pyproject.toml  setup.sh
frameworks/fm_superagi/: main.py  pyproject.toml  setup.sh
frameworks/fm_swarm/: main.py  pyproject.toml  setup.sh
frameworks/fm_taskweaver/: .gitignore  README.md  main.py  pyproject.toml  setup.sh
frameworks/fm_upsonic/: main.py  pyproject.toml  setup.sh
scripts/: cleanup.sh  run_arc.sh  run_bbh.sh  run_gsm8k.sh  setup.sh
