[project]
name = "bbh-analysis"
version = "0.1.0"
description = "Analysis notebook for BBH Framework Benchmarking"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "scipy>=1.10.0",
    "ipywidgets>=8.0.0",
    "pyyaml>=6.0.0",
]
