[project]
name = "fm-anus"
version = "0.1.0"
description = "ANUS (Autonomous Networked Utility System) framework implementation for BBH benchmarking"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "datasets==3.6.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
setup = "ready"