[project]
name = "fm-qwen-agent"
version = "0.1.0"
description = "Qwen-Agent framework implementation for BBH benchmarking"
requires-python = ">=3.10.0"
dependencies = [
    "qwen-agent>=0.0.10",
    "datasets==3.6.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
setup = "ready"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]