[project]
name = "fm-swarm"
version = "0.1.0"
description = "OpenAI Swarm framework implementation for BBH benchmarking"
requires-python = ">=3.13.5"
dependencies = [
    "openai>=1.99.0",
    "datasets==3.6.0",
    "requests>=2.25.0",
    "swarm",
]
setup = "ready"

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }
